Make minimal fields smaller (such as date fields) && align attribute separator correctly
[ci skip]

--- a/app/assets/stylesheets/content/work_packages/inplace_editing/_display_fields.sass
+++ b/app/assets/stylesheets/content/work_packages/inplace_editing/_display_fields.sass
@@ -118,3 +118,6 @@
 
 editable-attribute-field
   width: 100%
+
+  .-minimal &
+    width: initial
